PB-265: Video background for Banner - fix tinymce zindex overlapping sibling banner

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/banner/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/banner/_default.less
@@ -117,22 +117,23 @@
     .pagebuilder-overlay {
         padding: 30px;
         position: relative;
+        z-index: 2;
     }
 
     .video-overlay {
-        z-index: auto;
+        z-index: 1;
     }
 
     &.jarallax {
-        position: unset!important;
+        z-index: auto!important;
     }
 
     [id*='jarallax-container'] {
-        z-index: auto!important;
+        z-index: 0!important;
 
         > iframe,
         > video {
-            z-index: auto!important;
+            z-index: 0!important;
         }
     }
 }
